--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VenteAutomobile.Pi</title>
-  <!-- Insertion du Pi SDK -->
   <script src="https://sdk.minepi.com/pi-sdk.js"></script>
   <style>
     body {
@@ -23,9 +22,10 @@
       max-width: 90%;
     }
     img.logo {
-      width: 100px;
+      width: 200px;
       height: auto;
       margin-bottom: 20px;
+      border-radius: 10px;
     }
     h1 {
       font-size: 2.5rem;
@@ -50,11 +50,10 @@
     }
   </style>
   <script>
-    // Initialisation du SDK Pi
     Pi.init({
       version: "2.0",
       sandbox: true,
-      onIncompletePaymentFound: function(payment) {
+      onIncompletePaymentFound: function (payment) {
         console.log("Paiement incomplet :", payment);
       }
     });
@@ -63,18 +62,29 @@
       Pi.createPayment({
         amount: 0.001,
         memo: "Paiement test VenteAutoPi",
-        metadata: { type: "test" }
-      }).then(function(payment) {
-        alert("Paiement effectué ! " + JSON.stringify(payment));
-      }).catch(function(error) {
-        alert("Erreur : " + error.message);
+        metadata: { type: "test" },
+        onReadyForServerApproval: function (paymentId) {
+          console.log("Prêt pour approbation serveur :", paymentId);
+        },
+        onReadyForServerCompletion: function (paymentId, txid) {
+          console.log("Paiement terminé :", paymentId, txid);
+          alert("Paiement effectué ! TXID : " + txid);
+        },
+        onCancel: function (paymentId) {
+          console.log("Paiement annulé :", paymentId);
+          alert("Paiement annulé.");
+        },
+        onError: function (error, paymentId) {
+          console.error("Erreur :", error, "Paiement ID :", paymentId);
+          alert("Erreur : " + error.message);
+        }
       });
     }
   </script>
 </head>
 <body>
   <div class="container">
-    <img src="https://i.imgur.com/Nyv5kZh.png" alt="Logo Pi Network" class="logo">
+    <img src="compressed_image_1024x1024.jpg" alt="Voiture Showroom" class="logo">
     <h1>Bienvenue sur VenteAutomobile.Pi</h1>
     <p>L'application Testnet pour acheter et vendre des véhicules avec Pi Network.</p>
     <button class="btn" onclick="window.location.href='#';">Entrer dans l'application</button>
